# ccexceptions

./: .travis.yml  ANNOUNCE  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac  configure.sh
demos/: listdir.c
doc/: ccexceptions-macros.texi  ccexceptions.texi  cclibraries-examples.texi  ccnames.texi  condition-example-plain.texi  macros.texi
examples/: cclib-condition-object-alias.c  cclib-condition-object-alias.h  cclib-condition-object-alias.texi  cclib-condition-object.c  cclib-condition-object.h  cclib-condition-object.texi  destructor-trait.h  inline-body.c  inline-header.h  inline.c  plain-body.c  plain-condition-object.c  plain-condition-object.h  plain-header.h  plain.c  struct-as-pointer-no-descr.texi  struct-as-pointer-with-descr.texi  struct-as-value-no-descr.c  struct-as-value-no-descr.h  struct-as-value-no-descr.texi  struct-as-value-with-descr.c  struct-as-value-with-descr.h  struct-as-value-with-descr.texi  struct-by-ptr-no-descr.c  struct-by-ptr-no-descr.h  struct-by-ptr-no-descr.texi  struct-by-ptr-with-descr.c  struct-by-ptr-with-descr.h  struct-by-ptr-with-descr.texi  struct-by-val-no-descr.c  struct-by-val-no-descr.h  struct-by-val-no-descr.texi  struct-by-val-with-descr.c  struct-by-val-with-descr.h  struct-by-val-with-descr.texi  struct-no-descr.c  struct-no-descr.h  struct-with-descr.c  struct-with-descr.h  test-cclib-condition-object-alias.c  (+11 more)
meta/autoconf/: cce.m4  ccexceptions.m4  mmux-check-c-compiler-func-attributes.m4  mmux-core.m4
meta/automake/: mmux-makefile-rules
meta/scripts/: ccexceptions.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-autoconf.sh  install-automake.sh  install-pkg-config.sh  install-texinfo.sh
src/: ccexceptions-cclib-conditions.h  ccexceptions-conditions.c  ccexceptions-conditions.h  ccexceptions-deprecated.c  ccexceptions-handlers.h  ccexceptions-internals.h  ccexceptions-locations.c  ccexceptions-networking.h  ccexceptions-posix-calls.c  ccexceptions-posix-handlers.c  ccexceptions-posix.c  ccexceptions-system-calls.c  ccexceptions-system-handlers.c  ccexceptions-system.c  ccexceptions-system.h  ccexceptions-version.c  ccexceptions.h  cclibraries-config.h.in  cclibraries.h  ccnames.h
tests/: break-subtyping-body.c  break-subtyping-header.h  break-subtyping.c  condition-subtyping-break-body.c  condition-subtyping-break-cclib.c  condition-subtyping-break-cclib.h  condition-subtyping-break-header.h  condition-subtyping-break.c  condition-subtyping-break.h  condition-subtyping-errno-cclib.c  condition-subtyping-errno-cclib.h  condition-subtyping-errno.c  condition-subtyping-errno.h  condition-subtyping-error-body.c  condition-subtyping-error-cclib.c  condition-subtyping-error-cclib.h  condition-subtyping-error-header.h  condition-subtyping-error.c  condition-subtyping-invalid-arg-body.c  condition-subtyping-invalid-arg-cclib.c  condition-subtyping-invalid-arg-cclib.h  condition-subtyping-invalid-arg-header.h  condition-subtyping-invalid-arg.c  condition-subtyping-logic-error-body.c  condition-subtyping-logic-error-cclib.c  condition-subtyping-logic-error-cclib.h  condition-subtyping-logic-error-header.h  condition-subtyping-logic-error.c  condition-subtyping-math-error-body.c  condition-subtyping-math-error-cclib.c  condition-subtyping-math-error-cclib.h  condition-subtyping-math-error-header.h  condition-subtyping-math-error.c  condition-subtyping-math-error.h  condition-subtyping-math-infinity-body.c  condition-subtyping-math-infinity-cclib.c  condition-subtyping-math-infinity-cclib.h  condition-subtyping-math-infinity-header.h  condition-subtyping-math-infinity.c  condition-subtyping-math-infinity.h  (+110 more)
